kubernetes/route/advanced/destination-rule-transportadora_lb_policy_app.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: transportadora
spec:
  host: transportadora
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
