kubernetes/route/advanced/virtual-service-transportadora-v1-mirror-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: transportadora
spec:
  hosts:
    - transportadora
  http:
    - route:
        - destination:
            host: transportadora
            subset: version-v1
      mirror:
        host: transportadora
        subset: version-v2
